--- a/DabangProject/angular.json
+++ b/DabangProject/angular.json
@@ -84,9 +84,17 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "../node_modules/aos/dist/aos.css",
+              "src/styles.css",
+              "src/assets/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/map.js",
+              "src/assets/js/smooth-scroll.js",
+              "src/assets/js/image-effect.js",
+              "src/assets/js/jquery-3.3.1.min.js",
+              "../node_modules/aos/dist/aos.js"
+            ]
           }
         },
         "lint": {
